data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_788.wast
;; 9. **Invalid Control Flow with Mixed Branch Instructions**:    - Generate a test case involving multiple `br`, `br_if`, and `br_table` instructions within a loop, possibly conflicting or interacting in complex ways. Test for accurate CFG generation and handling of mixed branch instructions.

(assert_invalid
  (module
    (func (result i32)
      (block
        (loop (result i32)
          (br 1)
          (br_if 1 (i32.const 0))
          (br_table 1 0 (i32.const 1))
        )
      )
    )
  )
  "invalid branch target"
)